--- a/power/Power-rpubs.html
+++ b/power/Power-rpubs.html
@@ -762,6 +762,21 @@ hljs.initHighlightingOnLoad();
 <h1>Power</h1><p></p>
 
 <div class="slideContent" >
+<p>Based on </p>
+
+<p>Diez, D. M., Barr, C. D., &amp; Cetinkaya-Rundel, M. (2015).<br/>
+<em>OpenIntro Statistics</em> (3rd ed.).<br/>
+Open Intro.<br/>
+<a href="http://www.openintro.org">www.openintro.org</a>.  </p>
+
+<p>Section 5.4,  pp 239 - 245</p>
+
+</div>
+
+</section>
+<section data-transition="linear" data-transition-speed="default">
+
+<div class="slideContent noTitle" >
 <p>What chance is there that an experiment will detect a real effect?</p>
 
 </div>
