--- a/power/Power-rpubs.html
+++ b/power/Power-rpubs.html
@@ -762,7 +762,14 @@ hljs.initHighlightingOnLoad();
 <h1>Power</h1><p></p>
 
 <div class="slideContent" >
-<p>What chance is there that an experiment will detect a real effect?</p>
+<p>What chance is there that an experiment will detect a real effect?  </p>
+
+<p>Based on:  </p>
+
+<p><small>Diez, D.M., Barr, C.D. and Cetinkaya-Rundel, M. (2015)<br/>
+OpenIntro Statistics 3rd edition.<br/>
+<a href="http://www.openintro.org">www.openintro.org</a>.<br/>
+Section 5.4</small></p>
 
 </div>
 
